--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,3 +7,7 @@
 @import"./base/typography";
 @import"./layout/main";
 @import"./layout/footer";
+@import"./pages/accessories";
+@import"./pages/man";
+@import"./pages/new";
+@import"./pages/woman";
