--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -7,3 +7,8 @@ $color-seis: rgb(36, 0, 70);
 $colortx: white;
 $colorbg: black;
 $font-family: ('Anybody', 'cursive', 'Dongle', sans-serif, 'Fauna One', serif);
+
+$primary: rgb(60, 9, 108);
+
+$btn-outline-primary: rgb(60, 9, 108);
+$btn-hover-bg: rgb(123, 44, 191);
