cambie el color de los botones cambiando el primary en variables

--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -8,7 +8,4 @@ $colortx: white;
 $colorbg: black;
 $font-family: ('Anybody', 'cursive', 'Dongle', sans-serif, 'Fauna One', serif);
 
-$primary: rgb(60, 9, 108);
-
-$btn-outline-primary: rgb(60, 9, 108);
-$btn-hover-bg: rgb(123, 44, 191);
+$primary: $color-uno;
