agregue los mixin

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,8 +7,9 @@
 @import"./base/typography";
 @import"./layout/main";
 @import"./layout/footer";
+@import"./layout/media";
 @import"./pages/accessories";
 @import"./pages/man";
 @import"./pages/new";
 @import"./pages/woman";
-@import"../assets/scss/bootstrap.scss";
+@import"../assets/scss/bootstrap";
