--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -8,4 +8,6 @@ $colortx: white;
 $colorbg: black;
 $font-family: ('Anybody', 'cursive', 'Dongle', sans-serif, 'Fauna One', serif);
 
-$primary: $color-uno;
+$primary: $color-dos;
+$enable-shadows: true;
+$enable-gradients: true;
